<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:text="@string/user_details"
        app:layout_constraintBottom_toTopOf="@+id/translate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="169dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="56dp"
        android:text="@string/logut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numberRemember"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplication" />

    <Button
        android:id="@+id/seasons"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="51dp"
        android:text="@string/seasons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scramble"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="51dp"
        android:text="@string/calendar"
        app:layout_constraintBottom_toBottomOf="@+id/multiplication"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/multiplication" />

    <Button
        android:id="@+id/scramble"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="55dp"
        android:text="@string/scramble1"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seasons"
        app:layout_constraintTop_toBottomOf="@+id/clock" />

    <Button
        android:id="@+id/clock"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="57dp"
        android:text="@string/clock"
        app:layout_constraintBottom_toTopOf="@+id/scramble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/directions"
        app:layout_constraintTop_toBottomOf="@+id/translate_button" />

    <Button
        android:id="@+id/directions"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="51dp"
        android:text="@string/directions"
        android:textSize="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/clock"
        app:layout_constraintEnd_toStartOf="@+id/clock"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/multiplication"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"
        android:text="@string/multiplication"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendar"
        app:layout_constraintTop_toBottomOf="@+id/scramble" />

    <Button
        android:id="@+id/ball"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="51dp"
        android:text="@string/ball"
        app:layout_constraintBottom_toBottomOf="@+id/translate_button"
        app:layout_constraintEnd_toStartOf="@+id/translate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/translate_button" />

    <Button
        android:id="@+id/numberRemember"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:text="@string/numberRemember"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logout"
        app:layout_constraintTop_toTopOf="@+id/logout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/translate_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:text="TR"
        app:layout_constraintBottom_toTopOf="@+id/clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ball"
        app:layout_constraintTop_toBottomOf="@+id/user_details" />


</androidx.constraintlayout.widget.ConstraintLayout>